--- a/src/templates/component/collectionLoader.html.twig
+++ b/src/templates/component/collectionLoader.html.twig
@@ -1,6 +1,12 @@
 
 
 <div>
+    <span class="text-gray-500 text-sm ml-2" title="{{ {
+        '1to*': 'One to Many',
+        '*to*': 'Many to Many',
+        '*to1': 'Many to One',
+        '1to1': 'One to One'
+    }[type] }}">({{ type }})</span>
     <span>{{ elementCount }} item{{ elementCount > 1 ? 's' : '' }} </span>
     <button type="button" class="hover:text-blue-800 hover:border-blue-300 px-1 hover:cursor-pointer border border-transparent bg-blue-100 mb-1 ml-2 px-1 rounded-xl" 
         hx-post="{{ path(modeEdition ? 'autoadmin_collection_update' : 'autoadmin_collection_view', {'fqcn': fqcn, 'id': sourceId, 'field': field}) }}"
