--- a/src/templates/entity/read.html.twig
+++ b/src/templates/entity/read.html.twig
@@ -1,14 +1,14 @@
 <h1 class="text-xl">
-    <span class="underline">{{ fqcn|replace({
-        'App\\Entity\\':'<span class="text-gray-500">App\\Entity\\</span>', 
-        'App\\':'<span class="text-gray-500">App\\</span>'
-        })|raw }}</span>
-    <span class="text-primary">( {{ id }} )</span>
+    <a href="{{ path('autoadmin_entity_list', {'fqcn': fqcn|url_encode }) }}"  class="hover:text-blue-800"
+        hx-get="{{ path('autoadmin_entity_list', {'fqcn': fqcn|url_encode }) }}" hx-push-url="true" hx-target="#content">
+        <span class="text-gray-500">App\Entity\</span><span class="underline">{{ fqcn|replace({
+            'App\\Entity\\':'',
+            })|raw }}</span>
+    </a>
     <button 
         class="hover:text-blue-800 hover:border-blue-300 hover:cursor-pointer border border-transparent bg-blue-100 mb-1 px-1 rounded-xl"
         hx-get="{{ path('autoadmin_entity_update', {'fqcn': fqcn|url_encode, 'id': id}) }}" 
-        hx-push-url="true"
-        hx-target="#content" hx-swap="innerHTML">Edit</button>
+        hx-push-url="true" hx-target="#content">Edit</button>
 </h1>
 <div class="entity-display m-4 p-4 border border-gray-300 rounded bg-white">
     <table class="mb-4 min-w-1/2">
