--- a/src/templates/entity/list.html.twig
+++ b/src/templates/entity/list.html.twig
@@ -1,6 +1,10 @@
 <h1 class="text-xl">
     <span class="text-gray-500">App\Entity\</span><span class="underline">{{ fqcn }}</span>
     <span class="text-sm">( {{ nbItems }} items )</span>
+    <button 
+        class="hover:text-blue-800 hover:border-blue-300 hover:cursor-pointer border border-transparent bg-blue-100 mb-1 px-1 rounded-2xl h-7 w-7 text-center"
+        hx-get="{{ path('autoadmin_entity_update', {'fqcn': fqcn|url_encode, 'id': 'new'}) }}" 
+        hx-push-url="true" hx-target="#content"><div class="-mt-1">+</div></button>
     {% if app.request.query.all|filter((v, k) => k starts with 'f_' and v is not empty)|length > 0 %}
         <span class="text-sm text-gray-500"> - filtered by 
             {{ app.request.query.all
