Gestion d'erreur améliorée + UX filtrage + correctifs

--- a/src/templates/component/entityReference.html.twig
+++ b/src/templates/component/entityReference.html.twig
@@ -1,6 +1,7 @@
 <div class="mb-1">
-    <button class="flex hover:text-blue-800 hover:border-blue-400 hover:bg-blue-100 ps-1 hover:cursor-pointer border border-blue-100 rounded-xl"
+    <a class="flex hover:text-blue-800 hover:border-blue-400 hover:bg-blue-100 ps-1 hover:cursor-pointer border border-blue-100 rounded-xl"
         hx-get="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': id}) }}"
+        href="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': id}) }}"
         hx-push-url="true"
-        hx-target="#content" hx-swap="innerHTML">{{ label|replace({'App\\Entity\\':'', 'App\\':''})|raw }}</button>
+        hx-target="#content" hx-swap="innerHTML">{{ label|replace({'App\\Entity\\':'', 'App\\':''})|raw }}</a>
 </div>
