--- a/src/templates/entity/row.html.twig
+++ b/src/templates/entity/row.html.twig
@@ -1,11 +1,25 @@
 
 <tr class="border-b border-gray-200 hover:bg-gray-100">
     <td class="p-1 border border-gray-200 text-center">
-        <a class="hover:text-blue-800 hover:border-blue-300 px-1 hover:cursor-pointer border border-transparent bg-blue-100 mb-1 px-1 rounded-xl"
-            hx-get="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
-            hx-push-url="true"
-            href="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
-            hx-target="#content" hx-swap="innerHTML">Open</a>
+        <div class="flex gap-1 justify-center">
+            <a class="hover:text-blue-800 hover:border-blue-300 px-1 hover:cursor-pointer border border-transparent bg-blue-100 px-1 rounded-xl"
+                hx-get="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
+                href="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
+                hx-push-url="true"
+                hx-target="#content" hx-swap="innerHTML">🔍</a>
+        
+            <a class="hover:text-blue-800 hover:border-blue-300 px-1 hover:cursor-pointer border border-transparent bg-blue-100 px-1 rounded-xl"
+                hx-get="{{ path('autoadmin_entity_update', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
+                href="{{ path('autoadmin_entity_update', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
+                hx-push-url="true"
+                hx-target="#content" hx-swap="innerHTML">✏️</a>
+        
+            <a class="hover:text-red-800 hover:border-red-300 px-1 hover:cursor-pointer border border-transparent bg-red-100 px-1 rounded-xl"
+                hx-get="{{ path('autoadmin_entity_delete', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
+                href="{{ path('autoadmin_entity_delete', {'fqcn': fqcn|url_encode, 'id': entityRow[classMetadata.getIdentifierColumnNames()[0]]}) }}"
+                hx-push-url="true"
+                hx-target="#content" hx-swap="innerHTML">🗑️</a>
+        </div>
     </td>
     {% for h in headers %}
         <td class="p-1">{{ printableEntityAr[ h ]|raw }}</td>
