--- a/src/templates/entity/list.html.twig
+++ b/src/templates/entity/list.html.twig
@@ -1,5 +1,5 @@
 <h1 class="text-xl">
-    <span class="text-gray-500">App\Entity\</span><span class="underline">{{ fqcn }}</span>
+    <span class="text-gray-500">App\Entity\</span><span class="underline">{{ fqcn|replace({'App\\Entity\\':''}) }}</span>
     <span class="text-sm">( {{ nbItems }} items )</span>
     <button type="button" class="hover:text-blue-800 hover:border-blue-300 hover:cursor-pointer border border-transparent bg-blue-100 mb-1 px-1 rounded-2xl h-7 w-7 text-center"
         hx-get="{{ path('autoadmin_entity_update', {'fqcn': fqcn|url_encode, 'id': 'new'}) }}" 
