--- a/src/templates/modals/modal.html.twig
+++ b/src/templates/modals/modal.html.twig
@@ -2,7 +2,7 @@
 <div id="modal-{{ name }}" class="modal">
     <div class="modal-underlay"></div>
     <div class="modal-content relative">
-        <button id="modal-{{ name }}-close-button" class="absolute top-2 right-4 text-gray-500 hover:text-gray-800 hover:cursor-pointer font-bold text-2xl">&times;</button>
+        <button type="button" id="modal-{{ name }}-close-button" class="absolute top-2 right-4 text-gray-500 hover:text-gray-800 hover:cursor-pointer font-bold text-2xl">&times;</button>
         <h1>{% block title %}{% endblock %}</h1>
         {% block main %}
         
