--- a/src/templates/component/entityRemovableReference.html.twig
+++ b/src/templates/component/entityRemovableReference.html.twig
@@ -2,8 +2,7 @@
     <a class="flex justify-between hover:text-blue-800 hover:border-blue-400 hover:bg-blue-100 hover:cursor-pointer border border-blue-100 px-1 rounded-l-xl mr-0"
         hx-get="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': id}) }}"
         href="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': id}) }}"
-        hx-push-url="true"
-        hx-target="#content" hx-swap="innerHTML">{{ label|replace({'App\\Entity\\':'', 'App\\':''})|raw }}</a>
+        hx-push-url="true" hx-swap="none">{{ label|replace({'App\\Entity\\':'', 'App\\':''})|raw }}</a>
     <button type="button" class="hover:text-red-800 hover:border-red-400 hover:bg-red-300 hover:cursor-pointer border border-red-300 bg-red-100 px-1 rounded-r-xl ml-0"
         hx-post="{{ path('autoadmin_collection_remove_element', {
             'fqcn': owningFqcn|url_encode,
