--- a/src/templates/entity/edit.html.twig
+++ b/src/templates/entity/edit.html.twig
@@ -1,6 +1,6 @@
 <h1 class="text-xl">
     <a href="{{ path('autoadmin_entity_list', {'fqcn': fqcn|url_encode }) }}" class="hover:text-blue-800"
-        hx-get="{{ path('autoadmin_entity_list', {'fqcn': fqcn|url_encode }) }}" hx-push-url="true" hx-target="#content">
+        hx-get="{{ path('autoadmin_entity_list', {'fqcn': fqcn|url_encode }) }}" hx-push-url="true" hx-swap="none">
         <span class="text-gray-500">App\Entity\</span><span class="underline">{{ fqcn|replace({
             'App\\Entity\\':'',
             })|raw }}</span>
@@ -9,23 +9,23 @@
         <span class="text-green-500">(new)</span>
     {% else %}
         <span class="text-primary">( {{ id }} )</span>
-        <a class="hover:text-blue-800 hover:border-blue-300 px-1 hover:cursor-pointer border border-transparent bg-blue-100 mb-1 px-1 rounded-xl"
+        <a class="hover:text-blue-800 hover:border-blue-300 p-1 hover:cursor-pointer border border-transparent bg-blue-100 mb-1 rounded-xl"
             href="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': id}) }}"
             hx-get="{{ path('autoadmin_entity_view', {'fqcn': fqcn|url_encode, 'id': id}) }}" 
             hx-push-url="true"
-            hx-target="#content" hx-swap="innerHTML">View</a>
-        <a class="hover:text-red-800 hover:border-red-300 px-1 hover:cursor-pointer border border-transparent bg-red-100 mb-1 px-1 rounded-xl"
+            hx-swap="none">🔍</a>
+        <a class="hover:text-red-800 hover:border-red-300 p-1 hover:cursor-pointer border border-transparent bg-red-100 mb-1 rounded-xl"
             href="{{ path('autoadmin_entity_delete', {'fqcn': fqcn|url_encode, 'id': id}) }}"
             hx-get="{{ path('autoadmin_entity_delete', {'fqcn': fqcn|url_encode, 'id': id}) }}" 
             hx-push-url="true"
-            hx-target="#content" hx-swap="innerHTML">Delete</a>
+            hx-swap="none">🗑️</a>
     {% endif %}
 
 </h1>
 <form id="editForm" method="POST"
     hx-post="{{ path('autoadmin_entity_update', {'fqcn': fqcn|url_encode, 'id': id}) }}" 
     hx-push-url="true"
-    hx-target="#content" hx-swap="innerHTML">
+    hx-swap="none">
     <input type="hidden" name="definitive" value="1" />
 <div class="entity-display m-4 p-4 border border-gray-300 rounded bg-white">
     <table class="mb-4 min-w-1/2">
@@ -51,7 +51,7 @@
     </table>
     <button type="submit"
         class="hover:text-green-800 hover:border-green-300 hover:cursor-pointer border border-transparent bg-green-100 m-2 text-lg px-3 rounded-xl"
-        >{% if id == 'new' %}Create{% else %}Save{% endif %}</button>
+        >{% if id == 'new' %}💾 Create{% else %}💾 Save{% endif %}</button>
 </div> 
 </form>
 
